--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <title>Kris De</title>
 </head>
 <body>
-
+    <div id="navbar-container"></div>
     </body>
+
+    <script src="navbar.js"></script>
     </html>
