--- a/public/digitalart.html
+++ b/public/digitalart.html
@@ -1,7 +1,17 @@
-<link rel="stylesheet" href="style.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <title>Kris D</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
+  <body>
+  
 <div id="page-wrap">
+    <div id="navbar-container"></div>
     <h1>Prints</h1>
     <div id="image-container">
     
@@ -39,3 +49,6 @@
 
 </div>
 </div>
+<script src="navbar.js"></script>
+</body>
+</html>
