--- a/public/modeling.html
+++ b/public/modeling.html
@@ -1,10 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <title>Kris D</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Kris De</title>
-
+</head>
+  <body>
+    <div id="navbar-container"></div>
 <div id="page-wrap">
 <h1>Kris D Modeling</h1>
 <div id="image-container">
@@ -25,4 +30,6 @@
    
 </div>
 </div>
-
+<script src="navbar.js"></script>
+</body>
+</html>
