--- a/public/contact.html
+++ b/public/contact.html
@@ -14,10 +14,13 @@
 <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<!-- <form id="contact-form" action="/submit-form" method="POST">
+<!-- <form id="contact-form" action="/submit-form" method="POST"> -->
+  <form
+  action="https://formspree.io/f/mjkkwayb"
+  method="POST"
+>
     <h1>Get in Touch</h1>
     <p>Inquiries? We’d love to hear from you! Fill out the form below, and we’ll get back to you as soon as possible.</p>
-    Name 
     <label for="name">Full Name</label>
     <input 
       type="text" 
@@ -27,7 +30,6 @@
       required 
     />
 
-    Email 
     <label for="email">Email Address</label>
     <input 
       type="email" 
@@ -37,7 +39,6 @@
       required 
     />
 
- Message 
     <label for="message">Your Message</label>
     <textarea 
       id="message" 
@@ -47,25 +48,11 @@
       required
     ></textarea>
 
-  Submit Button 
+
     <button type="submit">Send Message</button>
-  </form> -->
+  </form>
 
 
-  <form
-  action="https://formspree.io/f/mjkkwayb"
-  method="POST"
->
-  <label>
-    Your email:
-    <input type="email" name="email">
-  </label>
-  <label>
-    Your message:
-    <textarea name="message"></textarea>
-  </label>
-  <!-- your other form fields go here -->
-  <button type="submit">Send</button>
-</form>
+  
   <script src="navbar.js"></script>
   </body>
