--- a/public/modeling.html
+++ b/public/modeling.html
@@ -11,7 +11,7 @@
   <body>
     <div id="navbar-container"></div>
 <div id="page-wrap">
-<h1>Kris D Modeling</h1>
+<h1>Modeling</h1>
 <div id="image-container">
     <img src="assets/k10.jpg"/>  
     <img src="assets/k5.jpg"/>  
